--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -1,3 +1,5 @@
+@import "bower_components/bootstrap/less/variables.less";
+
 .header__gradient {
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
@@ -11,8 +13,19 @@
 .navbar-brand {
     padding-top: 8px;
     padding-bottom: 7px;
+    
     img {
         width: 65px;
     }
+}
 
+.navbar-nav > li > a {
+    padding-top: (@grid-gutter-width / 2);
+    padding-bottom: (@grid-gutter-width / 2);
+    margin-top: (@grid-gutter-width / 2);
+    margin-bottom: (@grid-gutter-width / 2);
+}
+
+footer {
+    background: @navbar-default-bg;
 }
