--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FIDV Young Leaders</title>
-    <link rel="stylesheet" type="text/css" href="../build/1.0.0/css/style.min.css" />
+    <meta name="description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
+
+    <meta property="og:title" content="Friends of Israeli Disabled Veterans Young Leaders" />
+    <meta property="og:site_name" content="Friends of Israeli Disabled Veterans Young Leaders"/>
+    <meta property="og:url" content="https://fidv.org/youngleaders/" />
+    <meta property="og:description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
+    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.png" />
+
+    <link rel="canonical" href="https://fidv.org/youngleaders/" />
+
+    <link rel="stylesheet" type="text/css" href="./build/1.0.0/css/style.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="/youngleaders">
                     <img alt="Brand" src="img/logos/fidv-logo.png">
                 </a>
             </div>
@@ -42,16 +53,19 @@
                         <a class="page-scroll" href="#buy-tickets">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#board">Board</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#directions">Directions</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-primary" href="https://fidv.org/donations" target="_blank">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -68,17 +82,27 @@
                 <div class="intro-lead-in">FIDV Young Leaders</div>
                 <div class="intro-heading">Winter Gala</div>
                 <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
+                <div class="share">
+                    <ul class="list-inline social-buttons">
+                        <li>
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=fidv.org/youngleaders" class="social-buttons__facebook"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-buttons__twitter"><i class="fa fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
 
     <!-- Services Section -->
-    <section id="buy-tickets" class="bg-light-gray">
+    <section id="buy-tickets">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">FIDV Winter Gala Tickets</h2>
-                    <h3 class="section-subheading text-muted">January 21, 2015 @ TriBeCa Rooftop</h3>
+                    <h3 class="section-subheading text-muted">January 21, 2015 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -93,11 +117,15 @@
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About FIDV</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <div class="col-lg-12">
+                    <h2 class="section-heading text-center">About FIDV</h2>
+                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
+
+                    <p>Friends of Israel Disabled Veterans (FIDV) and Beit Halochem are committed to caring for Israeli servicemen and women disabled in the line of duty. Beit Halochem centers provide therapeutic, sports and recreational facilities to help them resume lives of purpose and dignity.</p>
                 </div>
             </div>
+            <br>
+            <br>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
@@ -171,11 +199,11 @@
     </section>
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="board">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
+                    <h2 class="section-heading">Our Amazing Board Members</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -235,11 +263,12 @@
     </section>
 
     <!-- Clients Aside -->
-    <section class="sponsors">
+    <section id="sponsors" class="sponsors">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Sponsors</h2>
+                    <br>
                 </div>
             </div>
             <div class="row">
@@ -263,6 +292,31 @@
                         <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="directions">
+        <div class="container"
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Directions</h2>
+                    <br>
+                </div>
+                <div class="col-sm-6">
+                    <div class="google-maps">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12095.013987948734!2d-74.0083491!3d40.7234427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x445fa1c6e4aa5a38!2sTribeca+Rooftop+(Apogee+Events)!5e0!3m2!1sen!2sus!4v1446927164753" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <h3>FIDV Winter Gala</h3>
+                    <address>
+                        <strong>TriBeCa Rooftop</strong><br>
+                        2 Desbrosses St.<br>
+                        New York, NY 10013<br>
+                    </address>
+                </div>  
             </div>
         </div>
     </section>
@@ -316,7 +370,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; fidv.org 2015</span>
+                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -334,7 +388,7 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="../build/1.0.0/js/youngleaders.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="./build/1.0.0/js/youngleaders.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 </body>
 </html>
