--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -1,4 +1,5 @@
 @import "bower_components/bootstrap/less/variables.less";
+@import "agency.less";
 
 .header__gradient {
     background-color: rgba(0, 0, 0, 0.4);
@@ -26,6 +27,41 @@
     margin-bottom: (@grid-gutter-width / 2);
 }
 
+section:nth-child(2n-1) {
+    .bg-light-gray;
+}
+
+.share {
+    padding-top: @grid-gutter-width; 
+    padding-bottom: @grid-gutter-width; 
+
+    ul.social-buttons {
+        li {
+            a {
+                background: #7a7a7a;
+
+                &:hover {
+                    background: @brand-primary;
+                }
+            }
+        }
+    } 
+}
+
+.google-maps {
+    position: relative;
+    padding-bottom: 75%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+
 footer {
-    background: @navbar-default-bg;
+    background: #ccc;
 }
