--- a/src/stylesheets/less/index.less
+++ b/src/stylesheets/less/index.less
@@ -52,3 +52,5 @@
 
 // Variable Overrides
 @import "variables.less";
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
