adding board chairmen

--- a/src/stylesheets/less/agency.less
+++ b/src/stylesheets/less/agency.less
@@ -516,6 +516,7 @@ section {
     img {
         margin: 0 auto;
         border: 7px solid white;
+        width: 240px;
     }
     h4 {
         margin-top: 25px;
