--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -48,6 +48,10 @@ section:nth-child(2n-1) {
     } 
 }
 
+.more-info {
+    padding-top: @grid-gutter-width;
+}
+
 .google-maps {
     position: relative;
     padding-bottom: 75%; // This is the aspect ratio
