--- a/views/index.html
+++ b/views/index.html
@@ -53,16 +53,10 @@
                         <a class="page-scroll" href="#buy-tickets">Tickets</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#board">Board</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#directions">Directions</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="btn btn-primary" href="https://fidv.org/donations" target="_blank" style="border:none;">Donate</a>
@@ -105,9 +99,87 @@
                     <h3 class="section-subheading text-muted">January 21, 2015 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-xs-12">
+            <div class="row">
+                <div class="col-md-8">
                     <img src="http://placehold.it/1000x1000?text=Tickets+Form+Here" class="img-responsive center-block">
+                    <div class="more-info">
+                        <p>Though it's been over one year since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
+
+                        <p>Please join us as we honor these brave soldiers on <strong>Thursday, January 21st at TriBeCa Rooftop</strong>, for the 2nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
+
+                        <p>At our Beit Halochem rehabilitation centers in Jerusalem, Tel Aviv, Haifa, and Be’er Sheva, we provide a broad range of personalized services and therapies for more than 51,000 disabled veterans and terror victims. The Beit Halochem centers offer a healing community of those who have "been there." They help each other meet and overcome the challenges of disability, on the social, physical and psychological levels. FIDV-Beit Halochem does it all!</p>
+                    </div>
+                    <div class="more-info">
+                        <p class="section-subheading text-muted">For more information please contact:</p>
+                        <h4>Ella Levine</h4>
+                        <p>212-689 3220<br><a href="mailto:elevine@fidv.org">elevine@fidv.org</a></p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="google-maps">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12095.013987948734!2d-74.0083491!3d40.7234427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x445fa1c6e4aa5a38!2sTribeca+Rooftop+(Apogee+Events)!5e0!3m2!1sen!2sus!4v1446927164753" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <h3>FIDV Winter Gala</h3>
+                    <address>
+                        <strong>TriBeCa Rooftop</strong><br>
+                        2 Desbrosses St.<br>
+                        New York, NY 10013<br>
+                    </address>
+
+                    <div class="row board">
+                        <div class="col-xs-12">
+                            <h3>Young Leadership Board</h3>
+                            <p class="text-center"><strong>Chairs</strong></p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p class="text-center">
+                                Michael Shmuely
+                            </p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p class="text-center">
+                                Jacob Kent
+                            </p>
+                        </div>
+                        <div class="col-xs-12">
+                            <p class="text-center"><strong>Board</strong></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et hendrerit ante, id convallis diam. In metus justo, posuere sed dapibus vitae, congue ac elit. Integer massa purus, dignissim sed urna vehicula, pretium varius tellus. Nunc aliquam, arcu eu bibendum dictum, ante turpis aliquet orci, nec sodales erat sapien eu turpis. Maecenas suscipit auctor nulla, in efficitur massa congue eget. Nunc dictum magna id tortor mattis, nec pharetra ante imperdiet. Fusce accumsan ullamcorper mollis. Praesent auctor finibus venenatis. Sed ac quam iaculis, congue lorem et, consequat risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut volutpat odio et pharetra maximus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sponsors -->
+    <section id="sponsors" class="sponsors">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Our Amazing Sponsors</h2>
+                    <br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    </a>
                 </div>
             </div>
         </div>
@@ -197,158 +269,7 @@
             </div>
         </div>
     </section>
-
-    <!-- Team Section -->
-    <section id="board">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Board Members</h2>
-                    <br><br>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="team-member">
-                        <img src="img/team/shmuely.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Michael Shmuely</h4>
-                        <p class="text-muted">Board Chairman</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/mshmu" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://www.facebook.com/mikey.shmuely" target="_blank"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/pub/michael-shmuely/18/191/794" target="_blank"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="team-member">
-                        <img src="img/team/jacobkent.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Jacob Kent</h4>
-                        <p class="text-muted">Board Chairman</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://www.facebook.com/jacob.kent.927"><i class="fa fa-facebook" target="_blank"></i></a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/pub/jacob-kent/30/815/605"><i class="fa fa-linkedin" target="_blank"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Clients Aside -->
-    <section id="sponsors" class="sponsors">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Sponsors</h2>
-                    <br>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="directions">
-        <div class="container"
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Directions</h2>
-                    <br>
-                </div>
-                <div class="col-sm-6">
-                    <div class="google-maps">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12095.013987948734!2d-74.0083491!3d40.7234427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x445fa1c6e4aa5a38!2sTribeca+Rooftop+(Apogee+Events)!5e0!3m2!1sen!2sus!4v1446927164753" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <h3>FIDV Winter Gala</h3>
-                    <address>
-                        <strong>TriBeCa Rooftop</strong><br>
-                        2 Desbrosses St.<br>
-                        New York, NY 10013<br>
-                    </address>
-                </div>  
-            </div>
-        </div>
-    </section>
     
-    <!-- Contact Section -->
-<!--     <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
- -->
     <footer>
         <div class="container">
             <div class="row">
