--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -1,4 +1,5 @@
 @import "bower_components/bootstrap/less/variables.less";
+@import "fancybox.less";
 @import "agency.less";
 
 .header__gradient {
@@ -14,7 +15,7 @@
 .navbar-brand {
     padding-top: 8px;
     padding-bottom: 7px;
-    
+
     img {
         width: 65px;
     }
@@ -32,8 +33,8 @@ section:nth-child(2n-1) {
 }
 
 .share {
-    padding-top: @grid-gutter-width; 
-    padding-bottom: @grid-gutter-width; 
+    padding-top: @grid-gutter-width;
+    padding-bottom: @grid-gutter-width;
 
     ul.social-buttons {
         li {
@@ -45,7 +46,7 @@ section:nth-child(2n-1) {
                 }
             }
         }
-    } 
+    }
 }
 
 .more-info {
