updating content and creating a donate page

--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -70,3 +70,14 @@ section:nth-child(2n-1) {
 footer {
     background: #ccc;
 }
+
+@media(max-width: @screen-sm) {
+    section {
+        padding: 50px 0;
+    }
+
+    .BBFormTitle,
+    section h2.section-heading {
+        font-size: 30px !important;
+    }
+}
