--- a/views/donate.html
+++ b/views/donate.html
@@ -26,7 +26,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="donate">
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -50,7 +50,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#buy-tickets">Tickets</a>
+                        <a class="page-scroll" href="/youngleaders#buy-tickets">Tickets</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
@@ -68,16 +68,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">FIDV Winter Gala Tickets</h2>
-                    <h3 class="section-subheading text-muted">January 21, 2016 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
+                    <h2 class="section-heading">Donate to FIDV</h2>
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-md-8">
                     <div id="bbox-root"></div>
                     <script type="text/javascript">
                            window.bboxInit = function () {
-                               bbox.showForm('e21f71a4-8bce-4bcd-953c-a0c638129b57');
+                               bbox.showForm('791bf9b7-54ff-4a50-96e3-41a2c4a96f9c');
                            };
                            (function () {
                                var e = document.createElement('script'); e.async = true;
