--- a/src/stylesheets/less/agency.less
+++ b/src/stylesheets/less/agency.less
@@ -157,7 +157,15 @@ h1, h2, h3, h4, h5, h6 {
         padding: 10px 0;
         .navbar-brand {
             font-size: 1.5em;
-        }    
+        }
+    }
+
+    .donate .navbar-default {
+        background-color: @gray-darkest;
+        padding: 10px 0;
+        .navbar-brand {
+            font-size: 1.5em;
+        }
     }
 }
 
@@ -291,8 +299,8 @@ section {
                     h4 {
                         margin: 0;
                     }
-                }                
-            }            
+                }
+            }
         }
         .portfolio-caption {
             max-width: 400px;
@@ -578,7 +586,7 @@ section#contact {
        font-weight: 700;
        color: @placeholder-text;
     }
-    :-ms-input-placeholder {  
+    :-ms-input-placeholder {
        .heading-font;
        font-weight: 700;
        color: @placeholder-text;
@@ -703,8 +711,8 @@ ul.social-buttons {
                 -webkit-transform: rotate(90deg);
                 /* Safari and Chrome */
                 z-index:1052;
-            }            
-        }        
+            }
+        }
     }
     .modal-backdrop {
         opacity: 0;
