adding donate page

--- a/views/index.html
+++ b/views/index.html
@@ -55,12 +55,37 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
+                    <li>
+                        <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+    <!-- Header -->
+    <header>
+        <div class="header__gradient"></div>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">FIDV Young Leaders</div>
+                <div class="intro-heading">Winter Gala</div>
+                <a href="#buy-tickets" class="page-scroll btn btn-xl">Buy Tickets</a>
+                <div class="share">
+                    <ul class="list-inline social-buttons">
+                        <li>
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=fidv.org/youngleaders" class="social-buttons__facebook"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-buttons__twitter"><i class="fa fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
     <!-- Services Section -->
@@ -99,6 +124,16 @@
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <div class="google-maps">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12095.013987948734!2d-74.0083491!3d40.7234427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x445fa1c6e4aa5a38!2sTribeca+Rooftop+(Apogee+Events)!5e0!3m2!1sen!2sus!4v1446927164753" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <h3>FIDV Winter Gala</h3>
+                    <address>
+                        <strong>TriBeCa Rooftop</strong><br>
+                        2 Desbrosses St.<br>
+                        New York, NY 10013<br>
+                    </address>
+
                     <div class="row board">
                         <div class="col-xs-12">
                             <a class="fancybox" href="img/winter_gala_invite_final.jpg">
