--- a/src/stylesheets/less/custom.less
+++ b/src/stylesheets/less/custom.less
@@ -2,6 +2,16 @@
 @import "fancybox.less";
 @import "agency.less";
 
+.btn-fidv {
+    color: #fff;
+    background-color: #757984;
+    border-color: #757984;
+
+    &:hover {
+        background-color: #fff !important;
+    }
+}
+
 .header__gradient {
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
@@ -72,6 +82,10 @@ footer {
 }
 
 @media(max-width: @screen-sm) {
+    body.donate {
+        padding-top: 80px;
+    }
+
     section {
         padding: 50px 0;
     }
