--- a/views/donate.html
+++ b/views/donate.html
@@ -64,7 +64,7 @@
 
 
     <!-- Services Section -->
-    <section id="buy-tickets">
+    <section>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
