--- a/views/index.html
+++ b/views/index.html
@@ -56,6 +56,9 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#sponsorship">Become a Sponsor</a>
+                    </li>
+                    <li>
                         <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
                     </li>
                 </ul>
@@ -153,13 +156,31 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="section-heading text-center">About FIDV</h2>
-                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
+                    <p>The men and women of the Israel Defense Forces serve their country with courage. The debt of gratitude the Jewish world owes them is inestimable. As well, we owe much to the courageous Israelis who, by living in Israel, secure this tiny land for all Jews.</p>
 
                     <p>Friends of Israel Disabled Veterans (FIDV) and Beit Halochem are committed to caring for Israeli servicemen and women disabled in the line of duty. Beit Halochem centers provide therapeutic, sports and recreational facilities to help them resume lives of purpose and dignity.</p>
                 </div>
             </div>
         </div>
     </section>
+
+<!-- Sponsorship Section -->
+    <section id="sponsorship">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-heading text-center">Become a Sponsor</h2>
+                    <br>
+                    <img src="img/gala-sponsors-small.jpg" class="img-responsive center-block">
+                    <br><br>
+                    <div class="text-center">
+                        <a href="img/gala-sponsors.pdf" class="btn btn-primary btn-lg" target="_blank">Download PDF</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <footer>
         <div class="container">
