fide post winter gala changes starting after this commit

--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">FIDV Winter Gala Tickets</h2>
-                    <h3 class="section-subheading text-muted">January 21, 2016 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
+                    <h3 class="section-subheading text-muted">March 17, 2016 @ <a href="https://www.google.com/maps/place/Tribeca+Rooftop+(Apogee+Events)/@40.7234427,-74.0083491,15z/data=!4m2!3m1!1s0x0:0x445fa1c6e4aa5a38" target="_blank">TriBeCa Rooftop</a></h3>
                 </div>
             </div>
             <div class="row">
@@ -116,7 +116,7 @@
                     <div class="more-info">
                         <p>Though it's been over one year since Operation Protective Edge, the lives of thousands of soldiers wounded in battle have changed forever. They have been seriously injured, and now they face a daily struggle with the difficult rehabilitation process, which for many will be a life-long battle.</p>
 
-                        <p>Please join us as we honor these brave soldiers on <strong>Thursday, January 21st at TriBeCa Rooftop</strong>, for the 2nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
+                        <p>Please join us as we honor these brave soldiers on <strong>Thursday, March 17th at TriBeCa Rooftop</strong>, for the 2nd Annual Winter Gala presented by the FIDV Young Leadership Board. It will be a night to celebrate life, while also honoring the sacrifices made by the brave soldiers – young and old – who have defended the homeland of Israel for us all.</p>
 
                         <p>At our Beit Halochem rehabilitation centers in Jerusalem, Tel Aviv, Haifa, and Be’er Sheva, we provide a broad range of personalized services and therapies for more than 51,000 disabled veterans and terror victims. The Beit Halochem centers offer a healing community of those who have "been there." They help each other meet and overcome the challenges of disability, on the social, physical and psychological levels. FIDV-Beit Halochem does it all!</p>
                     </div>
@@ -139,8 +139,8 @@
 
                     <div class="row board">
                         <div class="col-xs-12">
-                            <a class="fancybox" href="img/winter_gala_invite_final.jpg">
-                                <img src="img/winter_gala_invite_final-small.jpg" alt="" class="img-responsive center-block"/>
+                            <a class="fancybox" href="img/winter_gala_march_large.jpg">
+                                <img src="img/winter_gala_march_small.jpg" alt="" class="img-responsive center-block"/>
                             </a>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2015</span>
+                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
